tests/negative/regression/r31.orng
fn main() -> Int { 
    let x: while true {Int}
}
